--- a/BankSystem/appsettings.json
+++ b/BankSystem/appsettings.json
@@ -20,5 +20,31 @@
     "ValidateIssuerSigningKey": true,
     "AccessTokenExpireDate": 2,
     "RefreshTokenExpireDate": 30
+  },
+
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.MSSqlServer", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "override": {
+        "Microsoft": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "ConnectionString": "Server=DESKTOP-5KIMP6P\\SQL2022;Database=BankDB;Trusted_Connection=True;TrustServerCertificate=True",
+          "TableName": "SystemLogs",
+          "autoCreateSqlTable": true
+        }
+      }
+
+    ]
   }
+
 }
